addes section area to html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <meta charset="UTF-8" />
+     <title>Sara Garcia</title>
+     <meta charset="UTF-8" />
      <meta name="viewport" content ="width=device-width, inital-scale=1"/>
      <link rel="stylesheet" type="test/css" href="./assets/css/style.css"/>
     </head>
     <body>
         <header>
-            <h1> class= "header-name" > Sara Garcia</h1>
+            <h1>Sara Garcia</h1>
 
             <nav>
               <ul>
@@ -21,7 +22,24 @@
         </header>
     
         <main>
+            <section class="content">
+            <h2>About Me</h2>
+            <p>I am new to coding</p>
+            </section>
 
+            <section class="content">
+                <h2>My Work</h2>
+                img
+            </section>
+
+            <section class="content">
+                <h2>Contact Me</h2>
+                <p>503-409-7751</p>
+            </section>
+
+            <section class="content">
+                <h2>Resume</h2>
+            </section>
         </main>
     </body>
 </html>
