added css to html file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <title>Sara Garcia</title>
      <meta charset="UTF-8" />
      <meta name="viewport" content ="width=device-width, inital-scale=1"/>
-     <link rel="stylesheet" type="test/css" href="./assets/css/style.css"/>
+     <link rel="stylesheet" type="test/css" href="./css/style.css"/>
     </head>
     <body>
         <header>
@@ -22,24 +22,34 @@
         </header>
     
         <main>
-            <section class="content">
+         <section class="content">
+          <article>
             <h2>About Me</h2>
             <p>I am new to coding</p>
-            </section>
+          </article>
+         </section>
 
-            <section class="content">
+         <section class="content">
+            <div>
                 <h2>My Work</h2>
                 img
-            </section>
+            </div>
+         </section>
 
-            <section class="content">
+         <section class="content">
+            <div>
                 <h2>Contact Me</h2>
                 <p>503-409-7751</p>
-            </section>
+            </div>   
+         </section>
 
-            <section class="content">
+         <section class="content">
                 <h2>Resume</h2>
-            </section>
+         </section>
+
+         <aside>
+            <h3>Cool Subtitle Here</h3>
+         </aside>
         </main>
     </body>
 </html>
