updated the div,section,aside, and added more to css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <title>Sara Garcia</title>
      <meta charset="UTF-8" />
      <meta name="viewport" content ="width=device-width, inital-scale=1"/>
-     <link rel="stylesheet" type="test/css" href="./css/style.css"/>
+     <link rel="stylesheet" href="./css/style.css"/>
     </head>
     <body>
         <header>
@@ -40,16 +40,25 @@
             <div>
                 <h2>Contact Me</h2>
                 <p>503-409-7751</p>
+                <p>Saragca81@gmail.com</p>
+                <p>Saragar710</p>
+                <p>@Saragar710</p>
+                <p>Spotify</p>
             </div>   
          </section>
 
-         <section class="content">
-                <h2>Resume</h2>
-         </section>
 
          <aside>
             <h3>Cool Subtitle Here</h3>
          </aside>
+
+         <footer>Contact Me
+            <span>503-409-7751</span>
+            <span>Saragca81@gmail.com</span>
+            <span>Saragar710</span>
+            <span>@saragar710</span>
+    
+         </footer>
         </main>
     </body>
 </html>
