added Raven image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          <section class="content">
           <article>
             <h2>About Me</h2>
-            <img src="Sara-Garcia-Portfolio2023/IMG-0512.jpg"
+            <img src="https://i.pinimg.com/originals/f6/f8/93/f6f89358586c1ecf97ef08e2cb726d80.jpg" alt="Cartoon Raven from Teen Titans Go">
             <p>I am new to coding</p>
           </article>
          </section>
@@ -37,13 +37,13 @@
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTokLlpLKA-I_MAQWOvGOsfd1cD__3k4ANRcQH_l5RDEe5vuTEcUK5lLcnU5TMf9It5Ndc&usqp=CAU" alt="wave foarming" style="width:100%;">
                 <div class=="bottom-left">Surf Report</div>
                 <p>Led Wall</p>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS8IVCRrsmASqRBk4rlSD4Aq1jrYYD-GCG-YxzNhcj8uQc2GiYm9FBe-n6EQAPuQ9ibsK4&usqp=CAU" alt="bluewalls with white lights in shape of square">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS8IVCRrsmASqRBk4rlSD4Aq1jrYYD-GCG-YxzNhcj8uQc2GiYm9FBe-n6EQAPuQ9ibsK4&usqp=CAU" alt="bluewalls with white lights in shape of square" style="width:65%;">
                 <p>Calculator</p>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrTuJnbnD1AwjHROXezdGkVDPXI_grBj-z1Z-GGsDNIsWujTChIBv2bZA66SkTD9tr31o&usqp=CAU" alt="red cartoon calculator with blue bowtie">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrTuJnbnD1AwjHROXezdGkVDPXI_grBj-z1Z-GGsDNIsWujTChIBv2bZA66SkTD9tr31o&usqp=CAU" alt="red cartoon calculator with blue bowtie" style="width:65%;">
                 <p>Pastel Puzzle</p>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcToJ2O_R8v2QZJGzVslsB-divJsvl19Wd38t_PQkOrBMt079eaIrJ_twYBuEZmUA51Oj2g&usqp=CAU" alt="pastel puzzle pieces">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcToJ2O_R8v2QZJGzVslsB-divJsvl19Wd38t_PQkOrBMt079eaIrJ_twYBuEZmUA51Oj2g&usqp=CAU" alt="pastel puzzle pieces" style="width:65%;">
                 <p>Run Buddy</p>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQL0KjNw8FiUgbLIxElVLvRK0oX3KYMVQEow28_BGVgR-H_jx_sYDVGLBpz-bTi91QlCSo&usqp=CAU" alt="two minions running">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQL0KjNw8FiUgbLIxElVLvRK0oX3KYMVQEow28_BGVgR-H_jx_sYDVGLBpz-bTi91QlCSo&usqp=CAU" alt="two minions running" style="width:65%">
             </div class="container">
          </section>
 
