changed a few lines in html

--- a/index.html
+++ b/index.html
@@ -12,19 +12,24 @@
 
             <nav>
               <ul>
-                <li> <a href= "#">About Me</a></li>
-                <li> <a href= "#">My Work</a></li>
-                <li> <a href= "#">Contact Me</a></li>
-                <li> <a href= "#">Resume</a></li>
+                <li> <a href= "#">About Me</a>
+                </li>
+                <li> <a href= "#">My Work</a>
+                </li>
+                <li> <a href= "#">Contact Me</a>
+                </li>
+                <li> <a href= "#">Resume</a>
+                </li>
               </ul>
                
              </nav>
-             <aside>Cool Subtitle Here</aside>
+             <aside>Learning Code is fun!</aside>
         </header>
     
         <main>
-         <section class="content">
-          <article>
+         <section></section>
+          <!-- <article class="section1"> -->
+            <!-- <span class="vr><h2 id="About Me">About Me</h2></span> -->
             <h2>About Me</h2>
             <img src="https://i.pinimg.com/originals/f6/f8/93/f6f89358586c1ecf97ef08e2cb726d80.jpg" alt="Cartoon Raven from Teen Titans Go">
             <p>I am new to coding</p>
