in process of adding to css

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                     <h1 class="Projects">Forest</h1>
                 </div>
                 
-                <!-- <img src="https://images.unsplash.com/photo-1625225233840-695456021cde?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8Y2FsY3VsYXRvcnxlbnwwfHwwfHx8MA%3D%3D&w=1000&q=80" 
+                <!-- <!-- <img src="https://images.unsplash.com/photo-1625225233840-695456021cde?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8Y2FsY3VsYXRvcnxlbnwwfHwwfHx8MA%3D%3D&w=1000&q=80"  -->
                 <div id="Calculator" class="bottom-left">
                     <h1 class="Projects">Calculator</h1>
                 </div>
-                <!-- <img src="https://media.istockphoto.com/id/1394663855/photo/puzzle-pieces-in-tunnel-of-light.webp?b=1&s=170667a&w=0&k=20&c=xwcXP5uTAH5R115HSFGwtZFaUR7R6wlnj04ON4NQ03k=" 
+                <!-- <!-- <k=img src="https://media.istockphoto.com/id/1394663855/photo/puzzle-pieces-in-tunnel-of-light.webp?b=1&s=170667a&w=0&k=20&c=xwcXP5uTAH5R115HSFGwtZFaUR7R6wlnj04ON4NQ03"  -->
                 <div class="bottom-left">
                     <h1 class="Projects">Pastel Puzzle</h1>
                 </div>
